Fix issue with navbar z-index.
Fixes #13

--- a/chmvh_website/static/css/modules/_navbar.scss
+++ b/chmvh_website/static/css/modules/_navbar.scss
@@ -1,5 +1,6 @@
 .navbar {
   background: $navbar-bg;
+  z-index: $z-nav;
 
   @include element('brand') {
     flex-grow: 1;
