--- a/chmvh_website/static/css/modules/_vars.scss
+++ b/chmvh_website/static/css/modules/_vars.scss
@@ -18,6 +18,8 @@ $container-padding-small: 1em;
 $font-family-body: 'Open Sans', sans-serif;
 $font-family-headings: 'Roboto', sans-serif;
 
+$z-nav: 2;
+
 // Blockquote
 $blockquote-author-color: lighten($color-text, 30%);
 $blockquote-author-size: .85em;
